--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Ералаш</title>
+    
+    <title>Р•СЂР°Р»Р°С€</title>
 </head>
 <body>
 <header>
-    <h1>Ералаш</h1>
+    <h1>Р•СЂР°Р»Р°С€</h1>
 <nav>
     <a href="#">1</a>
     <a href="#">2</a>
@@ -17,21 +18,21 @@
     <a href="#">7</a>
 </nav>
 </header>
-    <body>
+    <main>
         <section>
 <article>
-    <p>совместно с детской мастерской</p><img src="#">
+    <p>СЃРѕРІРјРµСЃС‚РЅРѕ СЃ РґРµС‚СЃРєРѕР№ РјР°СЃС‚РµСЂСЃРєРѕР№</p><img src="#">
 </article>
 <article>
-    <img src="#"><p>Обьявляет набор в бесплатную КИНОШКОЛУ для детей от 7 до 13 лет</p>
+    <img src="#"><p>РћР±СЊСЏРІР»СЏРµС‚ РЅР°Р±РѕСЂ РІ Р±РµСЃРїР»Р°С‚РЅСѓСЋ РљРРќРћРЁРљРћР›РЈ РґР»СЏ РґРµС‚РµР№ РѕС‚ 7 РґРѕ 13 Р»РµС‚</p>
 </article>
 <article>
-    <img src="#">><p>Творческий отбор 12-13 декабря ул.Пушкина,13</p><img src="#">
+    <img src="#">><p>РўРІРѕСЂС‡РµСЃРєРёР№ РѕС‚Р±РѕСЂ 12-13 РґРµРєР°Р±СЂСЏ СѓР».РџСѓС€РєРёРЅР°,13</p><img src="#">
 </article>
 </section>
-    </body>
-    <footer>
-<p>Подробная информация по телефонам</p>>
+    </main>
+   <footer>
+<p>РџРѕРґСЂРѕР±РЅР°СЏ РёРЅС„РѕСЂРјР°С†РёСЏ РїРѕ С‚РµР»РµС„РѕРЅР°Рј</p>>
 <address>
     +7 (8112) 29-18-30
 </address>
@@ -41,7 +42,6 @@
 <address>
     pskov@eralash.ru
 </address>
-<h2>Успей записаться!</h2>
+<h2>РЈСЃРїРµР№ Р·Р°РїРёСЃР°С‚СЊСЃСЏ!</h2>
 <img src="#">
     </footer>
-</html>
