--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -8,15 +8,6 @@
 <body>
 <header>
     <h1>Ералаш</h1>
-<nav>
-    <a href="#">1</a>
-    <a href="#">2</a>
-    <a href="#">3</a>
-    <a href="#">4</a>
-    <a href="#">5</a>
-    <a href="#">6</a>
-    <a href="#">7</a>
-</nav>
 </header>
     <main>
         <section>
@@ -35,11 +26,7 @@
 <p>Подробная информация по телефонам</p>>
 <address>
     +7 (8112) 29-18-30
-</address>
-<address>
     +7 (911) 395-77-63
-</address>
-<address>
     pskov@eralash.ru
 </address>
 <h2>Успей записаться!</h2>
