--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
    <footer>
 <p>Подробная информация по телефонам</p>>
 <address>
-    +7 (8112) 29-18-30
-    +7 (911) 395-77-63
-    pskov@eralash.ru
+    <p>+7 (8112) 29-18-30</p>
+    <p>+7 (911) 395-77-63</p>
+    <p>pskov@eralash.ru</p>
 </address>
 <h2>Успей записаться!</h2>
 <img src="#">
